Added multiple lights, normal maps and animations

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div id="container">
     <div id="loadingMessage">
         <h1>Loading...</h1>
-        <p>This may take 10s of seconds</p>
+        <p>Parsing .obj file, this may take 10s of seconds</p>
     </div>
     <canvas/>
 </div>
